nickel-lang-cli/tests/snapshot/snapshots/snapshot__doc_stderr_function.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: no documentation found
  ┌─ [INPUTS_PATH]/docs/function.ncl:3:1
  │
3 │ fun x => x
  │ ^^^^^^^^^^
  │
  = documentation can only be collected from a record.


